@@ -1,3 +1,6 @@
+* 2005-06-13 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Fix multi-window problem on opening files
+	
 * 2005-06-12 Jeremy Sanders <jeremy@jeremysanders.net>
         - ReloadData command and Data, Reload dialog added to reload
 	linked datasets (idea J. Graham)
